--- a/LuuHoangAnhKhoa.html
+++ b/LuuHoangAnhKhoa.html
@@ -6,6 +6,12 @@
     <title>Chi Tiết Hóa Đơn</title>
     <link rel="stylesheet" href="css.css">
 </head>
+<header>
+    <div class="logo">
+        <img src="logo.png" alt="LuuHoangAnhKhoa">
+    </div>
+</header>
+
 <body>
     <div class="invoice-container">
         <h1>Chi Tiết Hóa Đơn</h1>
@@ -13,7 +19,7 @@
             <div class="invoice-info">
                 <p><strong>Mã Hóa Đơn:</strong> #123456</p>
                 <p><strong>Ngày Mua:</strong> 10/10/2023</p>
-                <p><strong>Tên Khách Hàng:</strong> Nguyễn Văn A</p>
+                <p><strong>Tên Khách Hàng:</strong> Lưu Hoàng Anh Khoa</p>
                 <p><strong>Địa Chỉ:</strong> 123 Đường ABC, Quận 1, TP.HCM</p>
             </div>
             <div class="car-details">
