--- a/LuuHoangAnhKhoa.html
+++ b/LuuHoangAnhKhoa.html
@@ -9,6 +9,7 @@
 <header>
     <div class="logo">
         <img src="logo.png" alt="LuuHoangAnhKhoa">
+        <i class="fa fa-quora" aria-hidden="true">Luu hoang Anh Khoa, 2180607640</i>
     </div>
 </header>
 
@@ -20,6 +21,7 @@
                 <p><strong>Mã Hóa Đơn:</strong> #123456</p>
                 <p><strong>Ngày Mua:</strong> 10/10/2023</p>
                 <p><strong>Tên Khách Hàng:</strong> Lưu Hoàng Anh Khoa</p>
+                <p><strong>MSSV:</strong> 2180607640</p>
                 <p><strong>Địa Chỉ:</strong> 123 Đường ABC, Quận 1, TP.HCM</p>
             </div>
             <div class="car-details">
